apps/media/base/transmission-tv/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission-tv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transmission-tv
  template:
    metadata:
      labels:
        app: transmission-tv
    spec:
      containers:
      - name: transmission-tv
        image: haugene/transmission-openvpn
        ports:
        - name: http
          containerPort: 9091
          protocol: TCP
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
        volumeMounts:
        - name: data-volume
          mountPath: /data
        - name: config-volume
          mountPath: /config
      volumes:
      - name: data-volume
        persistentVolumeClaim:
          claimName: transmission-tv-data
      - name: config-volume
        persistentVolumeClaim:
          claimName: transmission-tv-config
