apps/media/base/transmission-tv/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmission-tv-tls
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: global-issuer
    kubernetes.io/tls-acme: 'true'
spec:
  ingressClassName: haproxy
  rules:
  - host: transmission-tv${INGRESS_SUFFIX}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: transmission-tv
            port:
              number: 9091
  tls:
  - secretName: transmission-tv-tls
    hosts:
    - transmission-tv${INGRESS_SUFFIX}
